--- a/SuperQuick/MainWindow.xaml
+++ b/SuperQuick/MainWindow.xaml
@@ -13,12 +13,13 @@
 
     <Grid>
         <ScrollViewer>
-            <ItemsControl ItemsSource="{Binding Customers}" AlternationCount="2" ScrollViewer.CanContentScroll="True">
+            <ItemsControl ItemsSource="{Binding Path=Customers}" AlternationCount="2" ScrollViewer.CanContentScroll="True">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel x:Name="Main">
-                            <TextBlock Text="{Binding}" FontWeight="Bold" FontSize="14" Padding="10,10,0,0" />
-                            <TextBlock Text="{Binding Address}" FontSize="12" Padding="10,0,0,10" />
+                            <TextBlock Text="{Binding Path=FirstName, Mode=TwoWay}" FontWeight="Bold" FontSize="14" Padding="10,10,0,0" />
+                            <TextBlock Text="{Binding Path=LastName, Mode=TwoWay}" FontWeight="Bold" FontSize="14" Padding="10,10,0,0" />
+                            <TextBlock Text="{Binding Path=Address}" FontSize="12" Padding="10,0,0,10" />
 
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="Orders:" Margin="0,0,5,0" Padding="10,0,0,10" FontWeight="Bold" />
